[tool.poetry]
name = "ikievite_brain_games"
version = "0.5.0"
description = ""
authors = ["ikievite <ikievite@gmail.com>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.0"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

